# PDFTextExtraction

./: .gitignore  Makefile.am  README.md  bootstrap  cls  configure.ac
inc/: PDFAll.h  PDFContentStream.h  PDFDocument.h  PDFExtern.h  PDFFonts.h  PDFLex.h  PDFMacros.h  PDFMem.h  PDFObjects.h  PDFPages.h  PDFStream.h  PDFTextExtraction.h
src/: Main.c  Makefile.am  PDFTextExtraction.rc
src/PDFText/: Makefile.am  PDFFileStream.c  PDFFonts.c  PDFFonts_TT.c  PDFFonts_Table_CMAP.c  PDFFonts_Table_OS2.c  PDFIndirect.c  PDFInflate.c  PDFLex.c  PDFMem.c  PDFObjects.c  PDFPages.c  PDFPagesLabels.c  PDFParser.c  PDFStream.c  PDFStreamFont.c  PDFStreamLineFont.c  PDFStreamParser.c  PDFStreamTD.c  PDFStreamTM.c  PDFStreamUtility.c  PDFString.c  PDFTextExtraction.c  PDFTrailer.c  PDFUtility.c  PDFXref.c
